--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
+.App__button-ball {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: fuchsia;
+    cursor: pointer;
+}
+
+
+
+.App__button-ball span:before {
+    content: "";
+    position: absolute;
+    top: 19px;
+    left: 12px;
+    width: 15px;
+    height: 2px;
+    background-color: #ffffff;
+}
+
+.App__button-ball span:after {
+    content: "";
+    position: absolute;
+    top: 12px;
+    left: 19px;
+    width: 2px;
+    height: 15px;
+    background-color: #ffffff;
+}
+
+
+
+.App__button-ball:active{
+    background-color: #f5c02b;
+}
+
+
+
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
