--- a/src/assets/modelWindow/ModelWindow.module.css
+++ b/src/assets/modelWindow/ModelWindow.module.css
@@ -1,6 +1,6 @@
-.model{
-    width: 100vw;
-    height: 100vh;
+.model {
+    width: 100%;
+    height: 100%;
     background-color: rgba(169, 162, 162, 0.4);
     position: fixed;
     left: 0;
@@ -13,22 +13,22 @@
     opacity: 0;
 }
 
-.model.active{
+.model.active {
     pointer-events: all;
     opacity: 1;
 }
 
-.model__content{
-    width: 400px;
+.model__content {
+    width: 600px;
     height: 300px;
     background-color: #ffffff;
-    box-shadow:  0 0 10px 5px rgb(84, 79, 79);
+    box-shadow: 0 0 10px 5px rgb(84, 79, 79);
     transition: 0.4s all;
     transform: scale(0.5);
 
 }
 
-.model__content form{
+.model__content form {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -36,23 +36,45 @@
 }
 
 
-.model__content.active{
+.model__content.active {
     transform: scale(1);
 }
 
-.title{
-    border-bottom: 1px solid #bbb5b5;
+.title {
+    /*border-bottom: 1px solid #bbb5b5;*/
+    font-weight: bolder;
+    text-align: left;
     padding: 15px;
     font-size: 20px;
-    text-align: center;
-}
-.textInput{
-    padding: 0 20px;
 }
 
-.buttons{
+.subtitle {
+    text-align: left;
+    margin: 0 0 80px 15px;
+}
+
+.textInput {
+    padding: 0 20px;
+    margin: 0 0 60px 0;
+
+}
+
+.textInput input {
+    height: 20px;
+    border: none;
+    border-bottom: 1px solid #bbb5b5;
+
+}
+
+
+.buttons {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 10px;
+    margin: 0 10px;
+}
+
+.buttons__boxRieght{
+    display: flex;
 }
